--- a/example/index.html
+++ b/example/index.html
@@ -8,20 +8,6 @@
   <title>demo</title>
 </head>
 <body>
-  <div class="frame">
-    <div class="ctnr">
-      <div class="col">0</div>
-      <div class="col">1</div>
-      <div class="col">2</div>
-      <div class="col">3</div>
-      <div class="col">4</div>
-      <div class="col">5</div>
-      <div class="col">6</div>
-      <div class="col">7</div>
-      <div class="col">8</div>
-      <div class="col">9</div>
-      <div class="col">0</div>
-    </div>
-  </div>
+  <div class="app"></div>
 </body>
 </html>
