--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <div class="flip"></div>
+  <div class="num"></div>
   <button onclick="shuffle">click to shuffle</button>
 </body>
 </html>
