--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="mobile-web-app-capable" content="yes">
   <title>demo</title>
+  <style>.digit {font-size: 10vw}</style>
 </head>
 <body>
   <div class="flip"></div>
