⬆️ update gelerator: Object.keys bug

--- a/example/index.html
+++ b/example/index.html
@@ -12,5 +12,6 @@
   <div class="flip"></div>
   <div class="num"></div>
   <button onclick="shuffle">click to shuffle</button>
+  <script src="./index.js"></script>
 </body>
 </html>
