fix: 🐛 resize 'this' context got wrong

--- a/example/index.html
+++ b/example/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="en-us">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="mobile-web-app-capable" content="yes">
   <title>demo</title>
-  <style>.digit {font-size: 10vw}</style>
+  <style>
+    .digit {
+      font-size: 10vw
+    }
+  </style>
 </head>
+
 <body>
   <div class="flip"></div>
   <div class="num"></div>
-  <button onclick="shuffle">click to shuffle</button>
+  <button class="shuffle">click to shuffle</button>
+  <button class="destroy">click to destroy</button>
   <script src="./index.js"></script>
 </body>
+
 </html>
